--- a/css/general.scss
+++ b/css/general.scss
@@ -1,5 +1,5 @@
 :root {
-    --color-gray: #BEBEBE;
+    --color-gray: #cac0be;
     --color-light-gray: #F5F5F5;
     --color-dark-gray: #616365;
     --color-dark: #23262A;
@@ -8,50 +8,36 @@
     --max-content-width: 1683px;
 }
 
-.background-gray {
+.background-light-gray {
     background-color: var(--color-light-gray);
+}
+
+.background-gray {
+    background-color: var(--color-gray);
+}
+
+.height-560 {
+    height: 560px;
+}
+
+.flex-grow-2 {
+    flex-grow: 2;
 }
 
 button {
 
-
-
-    transition: all 0.1s ease;
-
-}
-
-.button-icon {
-    
-    background-color: white;
-    border-radius: 100%;
-    width: 36px;
-    height: 36px;
-    border: transparent;
-    box-shadow: 0px 0px 12px 4px #e8e8e8;
-    transition: all 0.1s ease;
-
-    &:hover {
-        background-color: #e8e8e8;
-        box-shadow: none;
-    }
-
-    &:active {
-        background-color: #e8e8e8;
-        box-shadow: 0px 0px 12px 4px #e8e8e8;
-        scale: 115%;
-    }
-
-}
-
-.button-red {
-
-    background-color: var(--color-red);
     border: none;
-    padding: 24px 51px;
-    color: white;
     font-weight: 500;
     position: relative;
+    border: none;
     transition: all 0.1s ease;
+
+}
+
+.button-fancy {
+
+    padding: 24px 51px;
+    color: white;
 
     &::before {
         content: ' ';
@@ -84,18 +70,16 @@ button {
 
     &:hover {
 
+        box-shadow: 0px 0px 5px #23262A;
+
         &::before {
-            
             left: calc(100% - 30px);   
             transform: rotate(180deg);
-
         }
     
         &::after {
-            
             right: calc(100% - 30px);          
             transform: rotate(180deg);
-
         }
 
     }
@@ -105,6 +89,39 @@ button {
         box-shadow: 0px 0px 5px #23262A;
     }
 
+}
+
+.button-icon {
+    
+    background-color: white;
+    border-radius: 100%;
+    width: 36px;
+    height: 36px;
+    border: transparent;
+    box-shadow: 0px 0px 12px 4px #e8e8e8;
+    transition: all 0.1s ease;
+
+    &:hover {
+        background-color: #e8e8e8;
+        box-shadow: none;
+    }
+
+    &:active {
+        background-color: #e8e8e8;
+        box-shadow: 0px 0px 12px 4px #e8e8e8;
+        scale: 115%;
+    }
+
+}
+
+.button-red {
+    background-color: var(--color-red);
+    color: white;
+}
+
+.button-black {
+    background-color: var(--color-dark);
+    color: white;
 }
 
 nav {
@@ -159,6 +176,18 @@ a {
 
 .text-align-center {
     text-align: center;
+}
+
+.width-fit-content {
+    width: fit-content;
+}
+
+.width-50p {
+    width: 50%;
+}
+
+.margin-49 {
+    margin: 49px;
 }
 
 .logo {
