--- a/css/index.css
+++ b/css/index.css
@@ -8,19 +8,8 @@
   position: absolute;
   left: 0;
   right: 0;
-}
-
-.align-bottom {
-  position: absolute;
-  bottom: 0;
-}
-
-.margin-bottom-100 {
-  margin-bottom: 100px;
-}
-
-.margin-top-50p {
-  margin-top: 50%;
+  top: 0;
+  z-index: -10;
 }
 
 .top-section-content {
@@ -52,8 +41,9 @@
   background-repeat: no-repeat;
   background-position: left;
   width: 100%;
-  height: 846px;
+  height: 1048px;
   z-index: -1;
+  pointer-events: none;
 }
 .top-section-content::after {
   content: " ";
@@ -65,9 +55,23 @@
   background-repeat: no-repeat;
   background-position: right;
   width: 100%;
-  height: 846px;
+  height: 1048px;
   z-index: -1;
   overflow-x: hidden;
+  pointer-events: none;
+}
+
+.align-bottom {
+  position: absolute;
+  bottom: 0;
+}
+
+.margin-bottom-100 {
+  margin-bottom: 100px;
+}
+
+.margin-top-50p {
+  margin-top: 50%;
 }
 
 h1 {
