--- a/css/index.scss
+++ b/css/index.scss
@@ -10,20 +10,9 @@
     position: absolute;
     left: 0;
     right: 0;
+    top: 0;
+    z-index: -10;
 
-}
-
-.align-bottom {
-    position: absolute;
-    bottom: 0;
-}
-
-.margin-bottom-100 {
-    margin-bottom: 100px;
-}
-
-.margin-top-50p {
-    margin-top: 50%;
 }
 
 .top-section-content {
@@ -54,8 +43,9 @@
         background-repeat: no-repeat;
         background-position: left;
         width: 100%;
-        height: 846px;
+        height: 1048px;
         z-index: -1;
+        pointer-events: none;
     }
     
     &::after {
@@ -68,11 +58,25 @@
         background-repeat: no-repeat;
         background-position: right;
         width: 100%;
-        height: 846px;
+        height: 1048px;
         z-index: -1;
         overflow-x: hidden;
+        pointer-events: none;
     }
 
+}
+
+.align-bottom {
+    position: absolute;
+    bottom: 0;
+}
+
+.margin-bottom-100 {
+    margin-bottom: 100px;
+}
+
+.margin-top-50p {
+    margin-top: 50%;
 }
 
 h1 {
