--- a/css/contact.css
+++ b/css/contact.css
@@ -12,15 +12,7 @@ h3 {
   width: 100%;
 }
 
-.comment-box {
-  width: 1110px;
-  height: 140px;
-  margin-bottom: 30px;
-}
-
 form {
-  position: relative;
-  left: calc(50% - 555px);
   margin-top: 70px;
   margin-bottom: 70px;
   overflow-x: clip;
@@ -42,6 +34,13 @@ input, textarea {
 }
 input:focus, input:active, textarea:focus, textarea:active {
   border: 2px solid var(--color-dark-gray);
+}
+
+.comment-box {
+  width: 100%;
+  height: 140px;
+  margin-bottom: 30px;
+  min-height: 68px;
 }
 
 .error {
