--- a/css/general.scss
+++ b/css/general.scss
@@ -6,6 +6,7 @@
     --color-white: #FFFFFF;
     --color-red: #FF7373;
     --max-content-width: 1683px;
+    --max-content-width2: 1110px;
 }
 
 * {
@@ -13,9 +14,15 @@
 }
 
 .main-layout {
-    // min-height: 100vh;
     max-width: var(--max-content-width);
     margin: 0 auto;
+}
+
+.main-layout2 {
+    max-width: var(--max-content-width2);
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 nav {
@@ -41,6 +48,44 @@ nav {
     
     a {
         font-weight: bold;
+    }
+
+}
+
+breadcrumb {
+    
+    display: block;
+    margin-bottom: 40px;
+    max-height: 23px;
+    
+    ul {
+        list-style-type: none;
+    }
+
+    li {
+
+        margin-left: 16px;
+        display: inline;
+
+        &:nth-of-type(n+2)::before {
+            content: '>';
+            margin-left: -10px;
+            margin-right: 10px;
+        }
+
+    }
+
+    .fa.fa-home {
+        position: absolute;
+        
+        &:before {
+            font-size: 10px;
+            display: block;
+            position: absolute;
+            margin-left: -16px;
+            margin-top: 6px;
+        }
+
     }
 
 }
