--- a/css/general.css
+++ b/css/general.css
@@ -1,7 +1,9 @@
+@charset "UTF-8";
 :root {
   --color-gray: #cac0be;
   --color-light-gray: #F5F5F5;
   --color-dark-gray: #616365;
+  --color-shadow: rgba(34, 37, 41, 0.06);
   --color-dark: #23262A;
   --color-white: #FFFFFF;
   --color-red: #FF7373;
@@ -129,6 +131,56 @@ footer .fa-linkedin:hover {
   align-self: center;
 }
 
+[badge] {
+  position: relative;
+}
+[badge]::after {
+  content: attr(badge);
+  position: absolute;
+  top: -4px;
+  background-color: var(--color-red);
+  border-radius: 100%;
+  color: white;
+  z-index: 1;
+  width: 16px;
+  height: 16px;
+  font-size: 11px;
+  font-family: poppins;
+  text-align: center;
+  padding-top: 3px;
+  padding-left: 0.5px;
+}
+
+rating {
+  display: block;
+  position: relative;
+  height: 14px;
+  font-size: 20px;
+  color: var(--color-red);
+  font-family: "Font Awesome 6 Pro";
+  font-weight: normal;
+}
+rating:after {
+  position: absolute;
+  top: -8px;
+  bottom: 0;
+}
+rating.rating-1-stars::after {
+  content: "★☆☆☆☆";
+}
+rating.rating-2-stars::after {
+  content: "★★☆☆☆";
+}
+rating.rating-3-stars::after {
+  content: "★★★☆☆";
+}
+rating.rating-4-stars::after {
+  content: "★★★★☆";
+}
+rating.rating-5-stars::after {
+  content: "★★★★★";
+}
+
 .background-light-gray {
   background-color: var(--color-light-gray);
 }
@@ -137,12 +189,83 @@ footer .fa-linkedin:hover {
   background-color: var(--color-gray);
 }
 
+.background-model5 {
+  background-image: url("../img/img-5.svg");
+  background-position: right;
+  background-repeat: no-repeat;
+}
+
+.background-model6 {
+  background-image: url("../img/img-6.svg");
+  background-position: right;
+  background-repeat: no-repeat;
+}
+
 .height-560 {
   height: 560px;
 }
 
+.width-50p {
+  width: 50%;
+}
+
+.width-635px {
+  width: 635px;
+}
+
+.margin-49 {
+  margin: 49px;
+}
+
+.margin-bottom-100 {
+  margin-bottom: 100px;
+}
+
+.margin-top-50p {
+  margin-top: 50%;
+}
+
 .flex-grow-2 {
   flex-grow: 2;
+}
+
+.pointer-events-none {
+  pointer-events: none;
+}
+
+.text-align-center {
+  text-align: center;
+}
+
+.width-fit-content {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.horizontal {
+  display: flex;
+  flex-direction: row;
+}
+
+.align-bottom {
+  position: absolute;
+  bottom: 0;
+}
+
+a {
+  text-decoration: none;
+  color: var(--color-dark);
+  transition: all 0.1s ease;
+}
+a:hover {
+  color: var(--color-red);
+}
+a.active {
+  color: var(--color-red);
+}
+a.active:hover {
+  filter: brightness(80%);
 }
 
 button {
@@ -152,10 +275,6 @@ button {
   border: none;
   padding: 24px 51px;
   transition: all 0.1s ease;
-}
-
-.pointer-events-none {
-  pointer-events: none;
 }
 
 .button-fancy {
@@ -214,11 +333,11 @@ button {
   transition: all 0.1s ease;
 }
 .button-icon:hover {
-  background-color: #e8e8e8;
+  background-color: var(--color-shadow);
   box-shadow: none;
 }
 .button-icon:active {
-  background-color: #e8e8e8;
+  background-color: var(--color-shadow);
   box-shadow: 0px 0px 12px 4px #e8e8e8;
   scale: 115%;
 }
@@ -233,60 +352,10 @@ button {
   color: white;
 }
 
-a {
-  text-decoration: none;
-  color: var(--color-dark);
-  transition: all 0.1s ease;
-}
-a:hover {
-  color: var(--color-red);
-}
-a.active {
-  color: var(--color-red);
-}
-a.active:hover {
-  filter: brightness(80%);
-}
-
-.text-align-center {
-  text-align: center;
-}
-
-.width-fit-content {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
-.width-50p {
-  width: 50%;
-}
-
-.margin-49 {
-  margin: 49px;
-}
-
-.horizontal {
-  display: flex;
-  flex-direction: row;
-}
-
-[badge] {
-  position: relative;
-}
-[badge]::after {
-  content: attr(badge);
-  position: absolute;
-  top: -4px;
-  background-color: var(--color-red);
-  border-radius: 100%;
-  color: white;
-  z-index: 1;
-  width: 16px;
-  height: 16px;
-  font-size: 11px;
-  font-family: poppins;
-  text-align: center;
-  padding-top: 3px;
-  padding-left: 0.5px;
+.button-product img {
+  width: 255px;
+  height: 210px;
+  background-color: var(--color-light-gray);
+  border: none;
+  outline: none;
 }/*# sourceMappingURL=general.css.map */
