--- a/css/general.scss
+++ b/css/general.scss
@@ -2,6 +2,7 @@
     --color-gray: #cac0be;
     --color-light-gray: #F5F5F5;
     --color-dark-gray: #616365;
+    --color-shadow: rgba(34, 37, 41, 0.06);
     --color-dark: #23262A;
     --color-white: #FFFFFF;
     --color-red: #FF7373;
@@ -24,6 +25,8 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+//#region Site wide components
 
 nav {
 
@@ -139,6 +142,58 @@ footer {
     align-self: center;
 }
 
+[badge] {
+
+    position: relative;
+
+    &::after {
+        content: attr(badge);
+        position: absolute;
+        top: -4px;
+        background-color: var(--color-red);
+        border-radius: 100%;
+        color: white;
+        z-index: 1;
+        width: 16px;
+        height: 16px;
+        font-size: 11px;
+        font-family: poppins;
+        text-align: center;
+        padding-top: 3px;
+        padding-left: 0.5px;
+    }
+
+}
+
+rating {
+
+    display: block;
+    position: relative;
+    height: 14px;
+    font-size: 20px;
+    color: var(--color-red);
+    font-family: "Font Awesome 6 Pro";
+    font-weight: normal;
+
+    &:after {
+        position: absolute;
+        top: -8px;
+        bottom: 0;
+    }
+
+    &.rating-1-stars::after { content: '★☆☆☆☆'; }
+    &.rating-2-stars::after { content: '★★☆☆☆'; }
+    &.rating-3-stars::after { content: '★★★☆☆'; }
+    &.rating-4-stars::after { content: '★★★★☆'; }
+    &.rating-5-stars::after { content: '★★★★★'; }
+
+}
+
+//#endregion
+//#region Utility
+
+//#region Background
+
 .background-light-gray {
     background-color: var(--color-light-gray);
 }
@@ -147,16 +202,102 @@ footer {
     background-color: var(--color-gray);
 }
 
+.background-model5 {
+    background-image: url("../img/img-5.svg");
+    background-position: right;
+    background-repeat: no-repeat;
+}
+
+.background-model6 {
+    background-image: url("../img/img-6.svg");
+    background-position: right;
+    background-repeat: no-repeat;
+}
+
+//#endregion
+//#region height, width
+
 .height-560 {
     height: 560px;
 }
+
+.width-50p {
+    width: 50%;
+}
+
+.width-635px {
+    width: 635px;
+}
+
+//#endregion
+//#region Margin
+
+.margin-49 {
+    margin: 49px;
+}
+
+.margin-bottom-100 {
+    margin-bottom: 100px;
+}
+
+.margin-top-50p {
+    margin-top: 50%;
+}
+
+//#endregion
 
 .flex-grow-2 {
     flex-grow: 2;
 }
 
-button {
+.pointer-events-none {
+    pointer-events: none;
+}
 
+.text-align-center {
+    text-align: center;
+}
+
+.width-fit-content {
+    width: fit-content;
+}
+
+.horizontal {
+    display: flex;
+    flex-direction: row;
+}
+
+.align-bottom {
+    position: absolute;
+    bottom: 0;
+}
+
+//#endregion
+//#region Buttons
+
+a {
+    
+    text-decoration: none;
+    color: var(--color-dark);
+    transition: all 0.1s ease;
+
+    &:hover {
+        color: var(--color-red);
+    }
+    
+    &.active {
+        color: var(--color-red);
+            
+        &:hover {
+            filter: brightness(80%);
+        }
+
+    }
+
+}
+
+button {
+    
     border: none;
     font-weight: 500;
     position: relative;
@@ -164,10 +305,6 @@ button {
     padding: 24px 51px;
     transition: all 0.1s ease;
 
-}
-
-.pointer-events-none {
-    pointer-events: none;
 }
 
 .button-fancy {
@@ -239,12 +376,12 @@ button {
     transition: all 0.1s ease;
 
     &:hover {
-        background-color: #e8e8e8;
+        background-color: var(--color-shadow);
         box-shadow: none;
     }
 
     &:active {
-        background-color: #e8e8e8;
+        background-color: var(--color-shadow);
         box-shadow: 0px 0px 12px 4px #e8e8e8;
         scale: 115%;
     }
@@ -261,67 +398,16 @@ button {
     color: white;
 }
 
-a {
-    
-    text-decoration: none;
-    color: var(--color-dark);
-    transition: all 0.1s ease;
+.button-product {
 
-    &:hover {
-        color: var(--color-red);
-    }
-    
-    &.active {
-        color: var(--color-red);
-            
-        &:hover {
-            filter: brightness(80%);
-        }
-
+    img {
+        width: 255px;
+        height: 210px;
+        background-color: var(--color-light-gray);
+        border: none;
+        outline: none;
     }
 
 }
 
-.text-align-center {
-    text-align: center;
-}
-
-.width-fit-content {
-    width: fit-content;
-}
-
-.width-50p {
-    width: 50%;
-}
-
-.margin-49 {
-    margin: 49px;
-}
-
-.horizontal {
-    display: flex;
-    flex-direction: row;
-}
-
-[badge] {
-
-    position: relative;
-
-    &::after {
-        content: attr(badge);
-        position: absolute;
-        top: -4px;
-        background-color: var(--color-red);
-        border-radius: 100%;
-        color: white;
-        z-index: 1;
-        width: 16px;
-        height: 16px;
-        font-size: 11px;
-        font-family: poppins;
-        text-align: center;
-        padding-top: 3px;
-        padding-left: 0.5px;
-    }
-
-}
+//#endregion
