Done with button-product for now.

--- a/css/general.css
+++ b/css/general.css
@@ -159,11 +159,15 @@ rating {
   color: var(--color-red);
   font-family: "Font Awesome 6 Pro";
   font-weight: normal;
+  margin-top: 4px;
+  margin-bottom: 4px;
 }
 rating:after {
   position: absolute;
   top: -8px;
   bottom: 0;
+  left: 0;
+  right: 0;
 }
 rating.rating-1-stars::after {
   content: "★☆☆☆☆";
@@ -246,6 +250,11 @@ rating.rating-5-stars::after {
 .horizontal {
   display: flex;
   flex-direction: row;
+}
+
+.vertical {
+  display: flex;
+  flex-direction: column;
 }
 
 .align-bottom {
@@ -352,10 +361,60 @@ button {
   color: white;
 }
 
-.button-product img {
+.button-product {
   width: 255px;
+  text-align: center;
+  position: relative;
+  padding: 0;
+  cursor: pointer;
+}
+.button-product img {
+  width: 100%;
+  margin: 0;
   height: 210px;
   background-color: var(--color-light-gray);
   border: none;
   outline: none;
+}
+.button-product p:first-of-type {
+  margin-top: 8px;
+  font-size: 13px;
+  font-weight: normal;
+  color: #616365;
+}
+.button-product p {
+  font-weight: bold;
+}
+.button-product .hover-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 210px;
+  background-color: rgba(112, 112, 112, 0.6666666667);
+  opacity: 0;
+  transition: all 0.1s ease;
+}
+.button-product:hover .hover-box {
+  opacity: 1;
+}
+.button-product .button-fancy {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 50px;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+.button-product .icon-buttons {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.button-product .button-icon {
+  margin-top: 10px;
+  margin-right: 10px;
+  font-weight: normal;
 }/*# sourceMappingURL=general.css.map */
