--- a/css/general.scss
+++ b/css/general.scss
@@ -206,10 +206,31 @@ rating {
     background-color: var(--color-gray);
 }
 
+.background-dark-gray {
+    background-color: var(--color-gray);
+}
+
+.background-white {
+    background-color: var(--color-white);
+}
+
+.background-model3 {
+    background-image: url("../img/img-3.svg");
+    background-position: left;
+    background-repeat: no-repeat;
+}
+
+.background-model4 {
+    background-image: url("../img/img-4.svg");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
 .background-model5 {
     background-image: url("../img/img-5.svg");
     background-position: right;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .background-model6 {
@@ -221,8 +242,20 @@ rating {
 //#endregion
 //#region height, width
 
+.height-100p {
+    height: 100%;
+}
+
 .height-560 {
     height: 560px;
+}
+
+.height-400 {
+    height: 400px;
+}
+
+.width-490 {
+    width: 490px;
 }
 
 .width-50p {
@@ -233,11 +266,27 @@ rating {
     width: 635px;
 }
 
+.height-232 {
+    height: 232px;
+}
+
+.width-100p {
+    width: 100%;
+}
+
 //#endregion
 //#region Margin
 
 .margin-49 {
     margin: 49px;
+}
+
+.margin-30 {
+    margin: 30px;
+}
+
+.margin-left-32 {
+    margin-left: 32px;
 }
 
 .margin-bottom-100 {
@@ -249,6 +298,34 @@ rating {
 }
 
 //#endregion
+
+.padding-64{
+    padding: 64px;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.height-fit-content {
+    height: fit-content;
+}
+
+.align-center {
+    align-self: center;
+}
+
+.pos-right {
+    position: absolute;
+    right: 0;
+}
+
+.pos-vertical-center {
+    top: 0;
+    bottom: 0;
+    margin-top: auto;
+    margin-bottom: auto;
+}
 
 .flex-grow-2 {
     flex-grow: 2;
@@ -289,6 +366,7 @@ a {
     text-decoration: none;
     color: var(--color-dark);
     transition: all 0.1s ease;
+    cursor: pointer;
 
     &:hover {
         color: var(--color-red);
@@ -301,6 +379,10 @@ a {
             filter: brightness(80%);
         }
 
+    }
+
+    &.underline {
+        text-decoration: underline;
     }
 
 }
@@ -317,7 +399,6 @@ button {
 }
 
 .button-fancy {
-
     
     color: white;
 
@@ -407,6 +488,20 @@ button {
     color: white;
 }
 
+.button-white {
+    background-color: var(--color-white);
+    color: black;    
+    
+    &::before {
+        border-color: black;
+    }
+    
+    &::after {
+        border-color: black;
+    }
+
+}
+
 .button-product {
     width: 255px;
     text-align: center;
@@ -477,3 +572,71 @@ button {
 }
 
 //#endregion
+
+.expand-on-hover:hover {
+    width: 100%;
+    height: 100%;
+}
+
+.expand-child-on-hover:hover > *:first-of-type {
+    width: 100%;
+    height: 100%;
+}
+.expand-child-on-hover > *:first-of-type {
+    transition: all 0.1s ease;
+}
+
+.gap-35 {
+    gap: 35px;
+}
+
+.button-specialty {
+    background-color: var(--light-gray);
+    width: 490px;
+    height: 232px;
+    background-color: var(--color-dark-gray);
+    user-select: none;
+    padding: 0;
+    margin: 0;
+    position: relative;
+    z-index: 0;
+    cursor: pointer;
+    text-align: left;
+
+    // margin-left: 35px;
+    // margin-bottom: 35px;
+
+    > div {
+        width: 50%;
+    }
+
+    &::before {
+        content: ' ';
+        position: absolute;
+        display: inline-block;
+        background-color: var(--color-white);
+        top: 0;
+        bottom: 0;        
+        left: 0;
+        width: 50%;
+        z-index: -1;
+        pointer-events: none;
+        transition: all 0.1s ease;
+    }
+
+    &:hover::before {
+        opacity: 50%;
+        width: 100%;
+    }
+
+    &:active {
+        scale: 105%;
+    }
+
+    * {
+        margin-left: 34px;
+        margin-right: 34px;
+        pointer-events: none;
+    }
+
+}
