--- a/css/general.scss
+++ b/css/general.scss
@@ -1,13 +1,14 @@
 :root {
     --color-gray: #cac0be;
     --color-light-gray: #F5F5F5;
-    --color-dark-gray: #616365;
+    --color-dark-gray: #7e7f80;
     --color-shadow: rgba(34, 37, 41, 0.06);
     --color-dark: #23262A;
     --color-white: #FFFFFF;
     --color-red: #FF7373;
     --max-content-width: 1683px;
     --max-content-width2: 1110px;
+    --max-content-width3: 1395px;
 }
 
 * {
@@ -24,6 +25,18 @@
     width: 100%;
     margin-left: auto;
     margin-right: auto;
+}
+
+.main-layout-left-aligned {
+    max-width: var(--max-content-width3);
+    width: 100%;
+    margin-right: auto;
+}
+
+.main-layout-right-aligned {
+    max-width: var(--max-content-width3);
+    width: 100%;
+    margin-left: auto;
 }
 
 //#region Site wide components
@@ -98,6 +111,7 @@ footer {
     position: relative;
     background-color: var(--color-light-gray);
     height: 110px;
+    margin-top: 110px;
 
     div {
         position: absolute;
@@ -165,6 +179,10 @@ footer {
 
 }
 
+section {
+    margin: 65px;
+}
+
 rating {
 
     display: block;
@@ -196,7 +214,15 @@ rating {
 //#endregion
 //#region Utility
 
-//#region Background
+//#region Color / Background
+
+.color-white {
+    color: white;
+}
+
+.color-gray {
+    color: #616365;
+}
 
 .background-light-gray {
     background-color: var(--color-light-gray);
@@ -207,11 +233,15 @@ rating {
 }
 
 .background-dark-gray {
-    background-color: var(--color-gray);
+    background-color: var(--color-dark-gray);
 }
 
 .background-white {
     background-color: var(--color-white);
+}
+
+.background-dark {
+    background-color: var(--color-dark);
 }
 
 .background-model3 {
@@ -239,11 +269,33 @@ rating {
     background-repeat: no-repeat;
 }
 
+.background-customer-support {
+    background-image: url("../img/customer-support.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.background-credit-card {
+    background-image: url("../img/credit-card.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.background-delivery-truck {
+    background-image: url("../img/delivery-truck.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 //#endregion
-//#region height, width
+//#region height / width
 
 .height-100p {
     height: 100%;
+}
+
+.height-670 {
+    height: 670px;
 }
 
 .height-560 {
@@ -274,41 +326,50 @@ rating {
     width: 100%;
 }
 
-//#endregion
-//#region Margin
-
-.margin-49 {
-    margin: 49px;
+.width-60 {
+    width: 60px !important;
 }
 
-.margin-30 {
-    margin: 30px;
+.height-60 {
+    height: 60px !important;
 }
 
-.margin-left-32 {
-    margin-left: 32px;
-}
-
-.margin-bottom-100 {
-    margin-bottom: 100px;
-}
-
-.margin-top-50p {
-    margin-top: 50%;
+.width-255 {
+    width: 255px;
 }
 
 //#endregion
+//#region Padding / Margin
 
-.padding-64{
-    padding: 64px;
-}
+.padding-0 { padding: 0px !important; }
+.padding-8 { padding: -8px !important; }
+.padding-50 { padding: 50px; }
+.padding-64 { padding: 64px; }
+
+.margin-0 { margin: 0px; }
+.margin-49 { margin: 49px; }
+.margin-30 { margin: 30px; }
+
+.margin-vertical-30 { margin-top: 30px; margin-bottom: 30px; }
+
+.margin-top-50p { margin-top: 50%; }
+.margin-top-90 { margin-top: 90px; }
+
+.margin-bottom-30 { margin-bottom: 30px; }
+.margin-bottom-26 { margin-bottom: 26px; }
+.margin-bottom-100 { margin-bottom: 100px; }
+
+.margin-left-0 { margin-left: 0px; }
+.margin-left-32 { margin-left: 32px; }
+
+//#endregion
 
 .bold {
     font-weight: bold;
 }
 
 .height-fit-content {
-    height: fit-content;
+    height: fit-content !important;
 }
 
 .align-center {
@@ -321,10 +382,39 @@ rating {
 }
 
 .pos-vertical-center {
+    position: absolute;
     top: 0;
     bottom: 0;
     margin-top: auto;
     margin-bottom: auto;
+}
+
+
+.pos-horizontal-center {
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.pos-vertical-center {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.pos-center {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    width: fit-content;
+    height: fit-content;
 }
 
 .flex-grow-2 {
@@ -508,6 +598,9 @@ button {
     position: relative;
     padding: 0;
     cursor: pointer;
+    user-select: none;
+    transition: all 0.1s ease;
+    font-size: 16px;
 
     img {
         width: 100%;
@@ -546,6 +639,10 @@ button {
         }
     }
 
+    &:active {
+        scale: 105%;
+    }
+
     .button-fancy {
         position: absolute;
         left: 0;
@@ -571,23 +668,37 @@ button {
 
 }
 
+.button-product.small {
+    width: 351px;
+    text-align: left;
+
+    img {
+        width: 160px;
+        height: 132px;
+        padding: 0;
+    }
+
+    .hover-box {
+        left: 0;
+        top: 0;
+        bottom: 0;
+        width: 160px;
+        height: 100%;
+        background-color: #707070AA;
+        // opacity: 0;
+        transition: all 0.1s ease;
+    }
+
+}
+
 //#endregion
-
-.expand-on-hover:hover {
-    width: 100%;
-    height: 100%;
-}
-
-.expand-child-on-hover:hover > *:first-of-type {
-    width: 100%;
-    height: 100%;
-}
-.expand-child-on-hover > *:first-of-type {
-    transition: all 0.1s ease;
-}
 
 .gap-35 {
     gap: 35px;
+}
+
+.margin-35 {
+    margin: 35px;
 }
 
 .button-specialty {
@@ -602,9 +713,6 @@ button {
     z-index: 0;
     cursor: pointer;
     text-align: left;
-
-    // margin-left: 35px;
-    // margin-bottom: 35px;
 
     > div {
         width: 50%;
