--- a/app/src/css/App.css
+++ b/app/src/css/App.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 :root {
   --color-gray: #cac0be;
   --color-light-gray: #F5F5F5;
@@ -21,25 +20,6 @@
   margin: 0 auto;
 }
 
-.main-layout2 {
-  max-width: var(--max-content-width2);
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.main-layout-left-aligned {
-  max-width: var(--max-content-width3);
-  width: 100%;
-  margin-right: auto;
-}
-
-.main-layout-right-aligned {
-  max-width: var(--max-content-width3);
-  width: 100%;
-  margin-left: auto;
-}
-
 nav {
   position: relative;
   -webkit-user-select: none;
@@ -50,6 +30,10 @@ nav {
   -moz-columns: 3;
        columns: 3;
   height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: end;
 }
 nav .fa {
   font-weight: normal;
@@ -60,33 +44,18 @@ nav a:not(.logo), nav button {
 nav a {
   font-weight: bold;
 }
+nav div {
+  width: 100%;
+}
 
-breadcrumb {
+.logo {
+  background-image: url("../img/logo.svg");
+  background-repeat: no-repeat;
+  background-position: left;
   display: block;
-  margin-bottom: 40px;
-  max-height: 23px;
-}
-breadcrumb ul {
-  list-style-type: none;
-}
-breadcrumb li {
-  margin-left: 16px;
-  display: inline;
-}
-breadcrumb li:nth-of-type(n+2)::before {
-  content: ">";
-  margin-left: -10px;
-  margin-right: 10px;
-}
-breadcrumb .fa.fa-home {
-  position: absolute;
-}
-breadcrumb .fa.fa-home:before {
-  font-size: 10px;
-  display: block;
-  position: absolute;
-  margin-left: -16px;
-  margin-top: 6px;
+  min-width: 103px;
+  height: 49px;
+  align-self: center;
 }
 
 footer {
@@ -94,6 +63,7 @@ footer {
   background-color: var(--color-light-gray);
   height: 110px;
   margin-top: 110px;
+  text-align: center;
 }
 footer div {
   position: absolute;
@@ -131,15 +101,6 @@ footer .fa-linkedin:hover {
   color: blue;
 }
 
-.logo {
-  background-image: url("../img/logo.svg");
-  background-repeat: no-repeat;
-  display: block;
-  width: 103px;
-  height: 49px;
-  align-self: center;
-}
-
 [badge] {
   position: relative;
 }
@@ -158,319 +119,6 @@ footer .fa-linkedin:hover {
   text-align: center;
   padding-top: 3px;
   padding-left: 0.5px;
-}
-
-section {
-  margin: 65px;
-}
-
-rating {
-  display: block;
-  position: relative;
-  height: 14px;
-  font-size: 20px;
-  color: var(--color-red);
-  font-family: "Font Awesome 6 Pro";
-  font-weight: normal;
-  margin-top: 4px;
-  margin-bottom: 4px;
-}
-rating:after {
-  position: absolute;
-  top: -8px;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-rating.rating-1-stars::after {
-  content: "★☆☆☆☆";
-}
-rating.rating-2-stars::after {
-  content: "★★☆☆☆";
-}
-rating.rating-3-stars::after {
-  content: "★★★☆☆";
-}
-rating.rating-4-stars::after {
-  content: "★★★★☆";
-}
-rating.rating-5-stars::after {
-  content: "★★★★★";
-}
-
-.color-white {
-  color: white;
-}
-
-.color-gray {
-  color: #616365;
-}
-
-.background-light-gray {
-  background-color: var(--color-light-gray);
-}
-
-.background-gray {
-  background-color: var(--color-gray);
-}
-
-.background-dark-gray {
-  background-color: var(--color-dark-gray);
-}
-
-.background-white {
-  background-color: var(--color-white);
-}
-
-.background-dark {
-  background-color: var(--color-dark);
-}
-
-.background-model3 {
-  background-image: url("../img/img-3.svg");
-  background-position: left;
-  background-repeat: no-repeat;
-}
-
-.background-model4 {
-  background-image: url("../img/img-4.svg");
-  background-repeat: no-repeat;
-  background-position: right;
-}
-
-.background-model5 {
-  background-image: url("../img/img-5.svg");
-  background-position: right;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.background-model6 {
-  background-image: url("../img/img-6.svg");
-  background-position: right;
-  background-repeat: no-repeat;
-}
-
-.background-customer-support {
-  background-image: url("../img/customer-support.svg");
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.background-credit-card {
-  background-image: url("../img/credit-card.svg");
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.background-delivery-truck {
-  background-image: url("../img/delivery-truck.svg");
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.height-100p {
-  height: 100%;
-}
-
-.height-670 {
-  height: 670px;
-}
-
-.height-560 {
-  height: 560px;
-}
-
-.height-400 {
-  height: 400px;
-}
-
-.width-490 {
-  width: 490px;
-}
-
-.width-50p {
-  width: 50%;
-}
-
-.width-635px {
-  width: 635px;
-}
-
-.height-232 {
-  height: 232px;
-}
-
-.width-100p {
-  width: 100%;
-}
-
-.width-60 {
-  width: 60px !important;
-}
-
-.height-60 {
-  height: 60px !important;
-}
-
-.width-255 {
-  width: 255px;
-}
-
-.padding-0 {
-  padding: 0px !important;
-}
-
-.padding-8 {
-  padding: -8px !important;
-}
-
-.padding-50 {
-  padding: 50px;
-}
-
-.padding-64 {
-  padding: 64px;
-}
-
-.margin-0 {
-  margin: 0px;
-}
-
-.margin-49 {
-  margin: 49px;
-}
-
-.margin-30 {
-  margin: 30px;
-}
-
-.margin-vertical-30 {
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
-.margin-top-50p {
-  margin-top: 50%;
-}
-
-.margin-top-90 {
-  margin-top: 90px;
-}
-
-.margin-bottom-30 {
-  margin-bottom: 30px;
-}
-
-.margin-bottom-26 {
-  margin-bottom: 26px;
-}
-
-.margin-bottom-100 {
-  margin-bottom: 100px;
-}
-
-.margin-left-0 {
-  margin-left: 0px;
-}
-
-.margin-left-32 {
-  margin-left: 32px;
-}
-
-.flex {
-  display: flex;
-}
-
-.bold {
-  font-weight: bold;
-}
-
-.height-fit-content {
-  height: -webkit-fit-content !important;
-  height: -moz-fit-content !important;
-  height: fit-content !important;
-}
-
-.align-center {
-  align-self: center;
-}
-
-.pos-right {
-  position: absolute;
-  right: 0;
-}
-
-.pos-vertical-center {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
-.pos-horizontal-center {
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.pos-vertical-center {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
-.pos-center {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-}
-
-.flex-grow-2 {
-  flex-grow: 2;
-}
-
-.pointer-events-none {
-  pointer-events: none;
-}
-
-.text-align-center {
-  text-align: center;
-}
-
-.width-fit-content {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
-.horizontal {
-  display: flex;
-  flex-direction: row;
-}
-
-.vertical {
-  display: flex;
-  flex-direction: column;
-}
-
-.align-bottom {
-  position: absolute;
-  bottom: 0;
 }
 
 a {
@@ -673,14 +321,6 @@ button {
   transition: all 0.1s ease;
 }
 
-.gap-35 {
-  gap: 35px;
-}
-
-.margin-35 {
-  margin: 35px;
-}
-
 .button-specialty {
   background-color: var(--light-gray);
   width: 490px;
@@ -724,4 +364,75 @@ button {
   margin-left: 34px;
   margin-right: 34px;
   pointer-events: none;
-}/*# sourceMappingURL=general.css.map */
+}
+
+.color-white {
+  color: white;
+}
+
+.color-gray {
+  color: #616365;
+}
+
+.background-light-gray {
+  background-color: var(--color-light-gray);
+}
+
+.background-gray {
+  background-color: var(--color-gray);
+}
+
+.background-dark-gray {
+  background-color: var(--color-dark-gray);
+}
+
+.background-white {
+  background-color: var(--color-white);
+}
+
+.background-dark {
+  background-color: var(--color-dark);
+}
+
+.background-model3 {
+  background-image: url("../img/img-3.svg");
+  background-position: left;
+  background-repeat: no-repeat;
+}
+
+.background-model4 {
+  background-image: url("../img/img-4.svg");
+  background-repeat: no-repeat;
+  background-position: right;
+}
+
+.background-model5 {
+  background-image: url("../img/img-5.svg");
+  background-position: right;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.background-model6 {
+  background-image: url("../img/img-6.svg");
+  background-position: right;
+  background-repeat: no-repeat;
+}
+
+.background-customer-support {
+  background-image: url("../img/customer-support.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.background-credit-card {
+  background-image: url("../img/credit-card.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.background-delivery-truck {
+  background-image: url("../img/delivery-truck.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+}/*# sourceMappingURL=App.css.map */
